2000-06-30  Ulrich Drepper  <drepper@redhat.com>

	* elf/Makefile (LDFLAGS-origtest): Actually add it.

	* sysdeps/ia64/htonl.S: New file.
	* sysdeps/ia64/htons.S: New file.
	* sysdeps/ia64/memcpy.S: Replace with version which does not use
	floating point registers.
	Patches by Dan Pop <Dan.Pop@cern.ch>.

2000-06-30  Andreas Jaeger  <aj@suse.de>

	* posix/Makefile (tests): tst-exec and tst-spawn only work with
	shared libraries.

	* io/Makefile (CFLAGS-test-lfs.c): New.
	(tests): Add test-lfs.

	* io/test-lfs.c: New file.

2000-06-30  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/i386/bits/string.h (strcmp): Use 8bit register in 8bit
	instruction.

2000-06-29  Andreas Jaeger  <aj@suse.de>

	* sunrpc/rpc_svcout.c (write_msg_out): Always use format string
	with syslog.
	(print_err_message): Likewise.
	Reported by Chris Evans <chris@ferret.lmh.ox.ac.uk>.

2000-06-29  Ulrich Drepper  <drepper@redhat.com>

	* locale/loadlocale.c (_nl_load_locale): Make sure all locale data
	used as words is properly aligned.

	* locale/programs/ld-ctype.c (ctype_output): Don't generate unaligned
	data files.

2000-06-29  Greg McGary  <greg@mcgary.org>

	* sysdeps/generic/libc-start.c (__libc_stack_end): Chop __unbounded.
	* sysdeps/unix/make-syscalls.sh: Handle signatures of
	length 7..9, just in case...
	* misc/sys/cdefs.h (__ptrvalue): Define as nothing for non-BP.

	* sysdeps/i386/bp-asm.h (PCOFF): New constant.
	(POP_ERRNO_LOCATION_RETURN): Fold insns.
	* sysdeps/i386/bits/setjmp.h (JB_SIZE): New constant.
	(PUSH_SIGNAL_MASK): New macro.
	* sysdeps/i386/__longjmp.S (__longjmp): Wrap symbol in BP_SYM ().
	LEAVE is unnecessary.  Check bounds of jmp_buf.
	* sysdeps/i386/elf/setjmp.S: Call PUSH_SIGNAL_MASK.  Wrap symbols
	in BP_SYM ().  Check bounds of jmp_buf.  Don't call LEAVE until
	immediately before tail-call.
	* sysdeps/i386/setjmp.S: Likewise.
	* sysdeps/i386/bsd-_setjmp.S: Likewise.
	* sysdeps/i386/bsd-setjmp.S: Likewise.

2000-06-29  Jakub Jelinek  <jakub@redhat.com>
