@@ -1,3 +1,8 @@
+2000-06-30  Greg McGary  <greg@mcgary.org>
+
+	* sysdeps/powerpc/stpcpy.S: Define & use symbolic register names.
+	Line up operands column with tabs.
+
 2000-06-30  Ulrich Drepper  <drepper@redhat.com>
 
 	* elf/Makefile (LDFLAGS-origtest): Actually add it.
